test component SyntaxParser